--- a/.github/workflows/fabric_deploy.yml
+++ b/.github/workflows/fabric_deploy.yml
@@ -7,12 +7,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      FABRIC_BASTION_KEY: ${{ secrets.FABRIC_BASTION_KEY }}
-      FABRIC_BASTION_USERNAME: ${{ secrets.FABRIC_BASTION_USERNAME }}
+      FABRIC_CREDS_FILE: /home/runner/.tokens.json
       FABRIC_PROJECT_ID: ${{ secrets.FABRIC_PROJECT_ID }}
-      FABRIC_SLICE_KEY: ${{ secrets.FABRIC_SLICE_KEY }}
-      FABRIC_SLICE_PUB_KEY: ${{ secrets.FABRIC_SLICE_PUB_KEY }}
-      FABRIC_TOKEN_JSON: ${{ secrets.FABRIC_TOKEN_JSON }}
+      FABRIC_BASTION_HOST: bastion.fabric-testbed.net
+      FABRIC_BASTION_USERNAME: ${{ secrets.FABRIC_BASTION_USERNAME }}
+      FABRIC_BASTION_KEY_LOCATION: /home/runner/.ssh/bastion_key
+      FABRIC_SLICE_PRIVATE_KEY_FILE: /home/runner/.ssh/slice_key
+      FABRIC_SLICE_PUBLIC_KEY_FILE: /home/runner/.ssh/slice_key.pub
 
     steps:
       - uses: actions/checkout@v3
@@ -26,6 +27,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Configure FABRIC Environment
+        run: |
+          echo "${{ secrets.FABRIC_TOKEN_JSON }}" > /home/runner/.tokens.json
+          mkdir -p /home/runner/.ssh
+          echo "${{ secrets.FABRIC_BASTION_KEY }}" > /home/runner/.ssh/bastion_key
+          chmod 600 /home/runner/.ssh/bastion_key
+          echo "${{ secrets.FABRIC_SLICE_KEY }}" > /home/runner/.ssh/slice_key
+          chmod 600 /home/runner/.ssh/slice_key
+          echo "${{ secrets.FABRIC_SLICE_PUB_KEY }}" > /home/runner/.ssh/slice_key.pub
 
       - name: Provision FABRIC Slice
         run: python scripts/provision_fabric.py
