Refactor FABRIC auth to use fabric_rc and python secret writing

--- a/.github/workflows/fabric_deploy.yml
+++ b/.github/workflows/fabric_deploy.yml
@@ -6,39 +6,38 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      FABRIC_CREDS_FILE: /home/runner/.tokens.json
-      FABRIC_PROJECT_ID: ${{ secrets.FABRIC_PROJECT_ID }}
-      FABRIC_BASTION_HOST: bastion.fabric-testbed.net
-      FABRIC_BASTION_USERNAME: ${{ secrets.FABRIC_BASTION_USERNAME }}
-      FABRIC_BASTION_KEY_LOCATION: /home/runner/.ssh/bastion_key
-      FABRIC_SLICE_PRIVATE_KEY_FILE: /home/runner/.ssh/slice_key
-      FABRIC_SLICE_PUBLIC_KEY_FILE: /home/runner/.ssh/slice_key.pub
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.9"
-
-      - name: Install dependencies
+      - name: Configure FABRIC Credentials
+        env:
+          FABRIC_TOKEN_JSON: ${{ secrets.FABRIC_TOKEN_JSON }}
+          FABRIC_BASTION_KEY: ${{ secrets.FABRIC_BASTION_KEY }}
+          FABRIC_SLICE_KEY: ${{ secrets.FABRIC_SLICE_KEY }}
+          FABRIC_SLICE_PUB_KEY: ${{ secrets.FABRIC_SLICE_PUB_KEY }}
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          mkdir -p ~/.fabric
+          python -c "import os; open(os.path.expanduser('~/.fabric/id_token.json'), 'w').write(os.environ['FABRIC_TOKEN_JSON'])"
+          python -c "import os; open(os.path.expanduser('~/.fabric/bastion_key'), 'w').write(os.environ['FABRIC_BASTION_KEY'])"
+          python -c "import os; open(os.path.expanduser('~/.fabric/slice_key'), 'w').write(os.environ['FABRIC_SLICE_KEY'])"
+          python -c "import os; open(os.path.expanduser('~/.fabric/slice_key.pub'), 'w').write(os.environ['FABRIC_SLICE_PUB_KEY'])"
+          chmod 600 ~/.fabric/bastion_key ~/.fabric/slice_key
 
-      - name: Configure FABRIC Environment
+      - name: Create fabric_rc
         run: |
-          echo "${{ secrets.FABRIC_TOKEN_JSON }}" > /home/runner/.tokens.json
-          mkdir -p /home/runner/.ssh
-          echo "${{ secrets.FABRIC_BASTION_KEY }}" > /home/runner/.ssh/bastion_key
-          chmod 600 /home/runner/.ssh/bastion_key
-          echo "${{ secrets.FABRIC_SLICE_KEY }}" > /home/runner/.ssh/slice_key
-          chmod 600 /home/runner/.ssh/slice_key
-          echo "${{ secrets.FABRIC_SLICE_PUB_KEY }}" > /home/runner/.ssh/slice_key.pub
+          cat <<EOF > fabric_rc
+          [DEFAULT]
+          FABRIC_CREDMGR_HOST=cm.fabric-testbed.net
+          FABRIC_ORCHESTRATOR_HOST=orchestrator.fabric-testbed.net
+          FABRIC_PROJECT_ID=${{ secrets.FABRIC_PROJECT_ID }}
+          FABRIC_TOKEN_LOCATION=/home/runner/.fabric/id_token.json
+          FABRIC_BASTION_HOST=bastion.fabric-testbed.net
+          FABRIC_BASTION_USERNAME=${{ secrets.FABRIC_BASTION_USERNAME }}
+          FABRIC_BASTION_KEY_LOCATION=/home/runner/.fabric/bastion_key
+          FABRIC_SLICE_PRIVATE_KEY_FILE=/home/runner/.fabric/slice_key
+          FABRIC_SLICE_PUBLIC_KEY_FILE=/home/runner/.fabric/slice_key.pub
+          EOF
 
       - name: Provision FABRIC Slice
+        env:
+          FABRIC_LOG_LEVEL: INFO
         run: python scripts/provision_fabric.py
 
       - name: Upload Slice Details
