--- a/.github/workflows/fabric_deploy.yml
+++ b/.github/workflows/fabric_deploy.yml
@@ -6,6 +6,19 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Configure FABRIC Credentials
         env:
           FABRIC_TOKEN_JSON: ${{ secrets.FABRIC_TOKEN_JSON }}
