Fix: Set FABRIC_RC_FILE env var to point to generated config

--- a/.github/workflows/fabric_deploy.yml
+++ b/.github/workflows/fabric_deploy.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Run Deployment
         env:
           FABRIC_LOG_LEVEL: INFO
+          FABRIC_RC_FILE: ${{ github.workspace }}/fabric_rc
         run: |
           python scripts/provision_fabric.py
 
